install/playground/kubernetes/contour-http-proxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: meshery
  namespace: meshery
spec:
  virtualhost:
    fqdn: playground.khulnasoft.com
    tls:
      secretName: tls-secret-meshery
  routes:
  - services:
    - name: meshery
      port: 9081
  - conditions:
    - prefix: /api/provider/extension/server/graphql/query
    enableWebsockets: true # Setting this to true enables websocket for Meshplay's extensions
    services:
    - name: meshery
      port: 9081
  - conditions:
    - prefix: /api/system/graphql/query
    enableWebsockets: true # Setting this to true enables websocket for Meshplay
    services:
    - name: meshery
      port: 9081
  - conditions:
    - prefix: /api/events
    services:
     - name: meshery
       port: 9081
    timeoutPolicy:
        idle: infinity
        response: infinity
