install/playground/kubernetes/meshery-playground-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: meshery
  name: meshery
spec:
  selector:
    matchLabels:
      app: meshery
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: meshery
    spec:
      serviceAccountName: meshery-server
      containers:
        - env:
            - name: PROVIDER_BASE_URLS
              value: https://meshery.layer5.io
            - name: PROVIDER
              value: Meshplay
            - name: PLAYGROUND
              value: "true"
            - name: DISABLE_OPERATOR
              value: "true"
          image: layer5/meshery:playground-v0.6.35
          imagePullPolicy: Always
          name: meshery
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
