install/playground/kubernetes/meshplay-playground-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: meshplay
  name: meshplay
spec:
  selector:
    matchLabels:
      app: meshplay
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: meshplay
    spec:
      serviceAccountName: meshplay-server
      containers:
        - env:
            - name: PROVIDER_BASE_URLS
              value: https://meshplay.khulnasoft.io
            - name: PROVIDER
              value: Meshplay
            - name: PLAYGROUND
              value: "true"
            - name: DISABLE_OPERATOR
              value: "true"
          image: khulnasoft/meshplay:playground-v0.6.35
          imagePullPolicy: Always
          name: meshplay
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
