install/playground/kubernetes/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/server-snippets":"location /api/system/graphql/query {\n  proxy_set_header Upgrade $http_upgrade;\n  proxy_http_version 1.1;\n  proxy_set_header X-Forwarded-Host $http_host;\n  proxy_set_header X-Forwarded-Proto $scheme;\n  proxy_set_header X-Forwarded-For $remote_addr;\n  proxy_set_header Host $host;\n  proxy_set_header Connection \"upgrade\";\n  proxy_cache_bypass $http_upgrade;\ [...]
    nginx.ingress.kubernetes.io/server-snippets: |
      location /api/system/graphql/query {
        proxy_set_header Upgrade $http_upgrade;
        proxy_http_version 1.1;
        proxy_set_header X-Forwarded-Host $http_host;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-For $remote_addr;
        proxy_set_header Host $host;
        proxy_set_header Connection "upgrade";
        proxy_cache_bypass $http_upgrade;
        }
  creationTimestamp: "2022-12-06T20:36:48Z"
  generation: 1
  name: nginx
  namespace: default
  resourceVersion: "4989903"
  uid: 70a4801f-59fc-4179-96ed-c5007700cf65
spec:
  ingressClassName: nginx
  rules:
    - host: playground.khulnasoft.com
      http:
        paths:
          - backend:
              service:
                name: meshery
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - playground.khulnasoft.com
      secretName: tls-secret
status:
  loadBalancer:
    ingress:
      - ip: 40.121.83.88
